# GRK-PROJEKT

./: CMakeLists.txt  README.md
cmake/: macros.cmake
extlibs/freeglut/lib/pkgconfig/: freeglut.pc
include/: Camera.h  Texture.h  perlin.h
shaders/: shader_color.frag
src/: Render_Utils.cpp  Shader_Loader.cpp  Texture.cpp  main.cpp
